# f5-ai-guardrails-nginx-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  plan.md  pyproject.toml
docs/: configuration.md  testing.md  troubleshooting.md
nginx/: guardrails.js  helpers.js  nginx.conf  nginx.conf.template
tests/: conf_helper.py  conftest.py  helpers.py  mock_servers.py  test_guardrails_errors.py  test_llm_errors.py  test_scan_blocked.py  test_scan_cleared.py  test_scan_redacted.py
